# Juice

./: .gitignore  README.md
core/: main.py  pyproject.toml
core/src/: main.py  static.py  utils.py
core/src/crypt/: crypt_files.py
core/src/generator/: pass_gen.py
core/tests/death_race_for_love/: robbery.txt
core/tests/fighting_demons/: sometimes.txt
core/tests/legends_never_die/: righteous.txt
server/: .gitignore  main.py  pyproject.toml  requeriments.txt  requirements.txt
server/scripts/: serve
server/src/: auth.py  config.py  model.py  passwords.py  routes.py  security.py  users.py
