[tool.poetry]
name = "juice-server"
version = "0.1.0"
description = "juice backend"
authors = ["Igdálias Cabamba <igdaliasmussulveiracabamba@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.84.0"

[tool.poetry.group.dev.dependencies]
deta = "^1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
